# scanerVIN

./: .env  alembic.ini  main.py  pyproject.toml
alembic/: env.py
core/: config.py
core/models/: db_helper.py  history.py  user.py
routers/: command.py  ext_report.py  full_report.py  gos_numder.py  pre_report.py
utils/: api_client.py  check_func.py  create_keyboard.py
