[tool.poetry]
name = "scanerVIN"
version = "0.1.0"
description = "Kwork"
authors = ["Rodion <rodionkireev44@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
aiogram = "^3.14.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
black = "^24.10.0"
pydantic-settings = "^2.6.1"
